# coding-quiz-api

./: .env  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  api.rest  docker-compose.yml  entrypoint.sh  ingest_gh.py  verify_crud.py
.sqlx/: query-03e90986a59d878a876ef45819805eb872365794d41a4d8f50dfbcd00cdde78e.json  query-0662133da6829bbe518977a49d3230e317d9aef4be8ed276f8f68c9583169853.json  query-07a4b2947ada7a000ac8ca5557be1685c62e01d5f9d1c9760c4288b9683275d5.json  query-0b53018f5acc3045680c9dcc97617e7a61b00e4a2e7a5282c554e7b1b4b866be.json  query-0e87e9cebaff370ffb1e56463d31107563260f4e66748799e8b9e1e38f028867.json  query-0e8fa2a47f10be54b138bceaa74f519866afe77d258421c8cb5450dd13de305b.json  query-1acbabbf2dfac59d89e2a3cfc81594f4556a66cd996cf0b88642482ac106aff0.json  query-1e56d19586872b52c255b1d05f4b829c86f09c441d94d9fc2b226ca5fd8f74a0.json  query-2257435c1d2a48cac513918b516a2e93bb89dd1eea87e677bc6e0fdd0f079258.json  query-2564f4fbf7e3566b1cfe0f8f25948198c047860afcf46b3eba1abc4969004602.json  query-2587f7399393029302f90a030a39dc20511a78984c795709845fdf475e24a833.json  query-290d52233bdc63736dd8c3d580399fc46d8346b3fd3fd27a3f5616dc25dfcd53.json  query-290e96c43982f52764244237283a16812fb398b01832f98e6d20ea202c930036.json  query-2d293fa7f8e4f551b9ed32d19d331eaa4fed7cfe8569805c744ee1c58c4369a9.json  query-36bff4dac8a05d075545a9f180d931d1991bfd271db3e2005c8d940da348ddc9.json  query-36fcc1870305462d72f0f5fad1e9963e51ce02b542ab02cb930406cffe3474d0.json  query-3de9aac2100c45155f6aa2e06397fdfc3acff1181bbaf8dceee116aaa4507979.json  query-42538e5e8f0965196c56f6aa44011d59f3fae707d142e38e316a78d0c7add579.json  query-43fa0df9930acd3415b70cb96277b32e6796a12566e8aeb2f53c2e54797d4b09.json  query-47ed7c3b60ecbbf03830ba83818bacfc4a1e6129b5a189ed9bbc5a5530401651.json  query-4be7f86d4f00ed9b9d166384b4f5ffb330fe3b60c8efb7fc2507e100b7a0f71d.json  query-4c7356ee7372580fecf787e05aa0b652d187a3f8deec5ec6ed3ee33384fa1e6c.json  query-523b6d73bee62618b9f050485b3846d3b53c45a03439cc8e1f56c0f556ba3317.json  query-571436778415c64aeafa3801f081641350ce245b42abc3e2b2872469b12b93ae.json  query-59bf947ced86c040548e3a57fd07178658b9e855df2db3004df5e3924eebc79b.json  query-5d2654a990b6db3db599d0733ec01235e741022f59c1736680679a9a25ce8dbc.json  query-626c502a62968f38eae2a10643ae5f2d0eeed82b07b269d41c3a0c6587e20279.json  query-67a4748a765c4569b017da5f806affb29dd26342fbba929a29fa0a7ddabe988a.json  query-69cac7464b37013bd3b5cb4f2bb05d00e1241142c247540732d9647ba98994cd.json  query-70880cd33c0d5176fe6adfb9e779f5887fdc7febdcd1f581fecf816aa5448e13.json  query-711b4576100068752f64f247bf6708731a683153696c7d7500873109ac5b1cf8.json  query-729e389dfd10e8cac38ca5b6ec2d8be9c941bc0ef6a2f949023944155bc991a2.json  query-736a91c8104eb405ef67b358f0f367ed011ea2eb45ce29dd6166fc65d159fcb8.json  query-80aaadd2f4c1790f852a8c61ccfee0c65be9706e70f0aa2bce4edc2fe0df00e0.json  (+18 more)
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  main.rs  models.rs  state.rs
crates/api/tests/: edge_cases.rs  health_check.rs  quiz_execution.rs  quizzes.rs
crates/api/tests/common/: mod.rs
crates/authorizer/: Cargo.toml
crates/authorizer/src/: lib.rs  main.rs
(+54 files in other folders)
