[package]
name = "coding-quiz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros"] }
dotenv = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
