[package]
name = "coding-quiz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["serde"] }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
tsid = { version = "0.3.4", features = ["serde_as_string"] }
walkdir = "2.5.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
futures = "0.3.31"
lambda-web = { version = "0.2", features = ["actix4"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
