[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
